--- a/app.json
+++ b/app.json
@@ -12,15 +12,15 @@
     "stack": "container",
     "env": {
         "API_ID": {
-            "description": "Enter your API id You can generate by https://my.telegram.org/auth",
+            "description": "27309858",
             "required": true
         },
         "API_HASH": {
-            "description": "Enter your API Hash You can generate by https://my.telegram.org/auth",
+            "description": "db2420265b9b2e6602f487fa3f102ba6",
             "required": true
         },
         "BOT_TOKEN": {
-            "description": "Enter your bot token You can generate by @BotFather",
+            "description": "7954604868:AAHCMaOzlRCurV3TRlnsatvS2o_VSxVQMW8",
             "required": true
         }
     },
